--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 							<div class="elementor-background-overlay"></div>
 							<div class="elementor-container elementor-column-gap-default">
 					<div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-db1f4ea" data-id="db1f4ea" data-element_type="column">
-			<div class="elementor-widget-wrap elementor-element-populated">
+			<div class="pad-0 elementor-widget-wrap elementor-element-populated">
 						<div class="elementor-element elementor-element-2fa0ac6 elementor-widget elementor-widget-heading" data-id="2fa0ac6" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
 			<h2 class="elementor-heading-title elementor-size-default">Register Now to Access Subsidized Fertilizers</h2>		</div>
@@ -316,7 +316,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 		</div>
 					</div>
 		</section>
-				<section class="elementor-section elementor-top-section elementor-element elementor-element-5f3d212 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="5f3d212" data-element_type="section" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
+				<section class="pad-top-0 elementor-section elementor-top-section elementor-element elementor-element-5f3d212 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="5f3d212" data-element_type="section" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
 						<div class="elementor-container elementor-column-gap-default">
 					<div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-0b95703" data-id="0b95703" data-element_type="column">
 			<div class="elementor-widget-wrap elementor-element-populated">
