--- a/products/index.html
+++ b/products/index.html
@@ -208,7 +208,7 @@ document.addEventListener("readystatechange", ev => {
 		</div>
 					</div>
 		</div>
-				<section class="elementor-section elementor-top-section elementor-element elementor-element-334d998 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="334d998" data-element_type="section" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
+				<section class="overflow-none elementor-section elementor-top-section elementor-element elementor-element-334d998 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="334d998" data-element_type="section" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
 						<div class="elementor-container elementor-column-gap-default">
 					<div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-9d346c5" data-id="9d346c5" data-element_type="column">
 			<div class="elementor-widget-wrap elementor-element-populated">
